zephyr: Initial port
Get Soletta's main loop running, using the our common (OS independent)
idlers and timeouts, plus the necessary stubs to build.

Signed-off-by: Ricardo de Almeida Gonzaga <ricardo.gonzaga@intel.com>
Signed-off-by: Ederson de Souza <ederson.desouza@intel.com>
Signed-off-by: Iván Briano <ivan.briano@intel.com>
Signed-off-by: Gustavo Lima Chaves <gustavo.lima.chaves@intel.com>

--- a/Kconfig
+++ b/Kconfig
@@ -8,6 +8,7 @@ config BASE_OS
     default "contiki" if HAVE_CONTIKI
     default "linux" if HAVE_LINUX
     default "riot" if HAVE_RIOTOS
+    default "zephyr" if HAVE_ZEPHYR
 
 source "tools/build/Kconfig.$BASE_OS"
 
