--- a/src/lib/common/Kconfig
+++ b/src/lib/common/Kconfig
@@ -38,6 +38,7 @@ choice
 	default PLATFORM_LINUX_MICRO if LINUX
 	default PLATFORM_RIOTOS if RIOT
 	default PLATFORM_CONTIKI if CONTIKI
+	default PLATFORM_ZEPHYR if ZEPHYR
 	default PLATFORM_DUMMY
 	help
 
@@ -136,6 +137,18 @@ config PLATFORM_CONTIKI
             Soletta aims to do its best to offer the same experience on
             all platforms, including Contiki.
 
+config PLATFORM_ZEPHYR
+	bool "zephyr"
+	depends on ZEPHYR
+	help
+            This platform is to be used with Zephyr OS.
+
+            Zephyr (http://zephyr-project.intel.com/) is an open source operating
+            system for the Internet of Things.
+
+            Soletta aims to do its best to offer the same experience on
+            all platforms, including Zephyr.
+
 endchoice
 
 config SOL_BUS
@@ -152,6 +165,7 @@ choice
 	default MAINLOOP_POSIX if LINUX
 	default MAINLOOP_RIOTOS if RIOT
 	default MAINLOOP_CONTIKI if CONTIKI
+	default MAINLOOP_ZEPHYR if ZEPHYR
 	help
             The main loop is used to provide uniform event delivering
             accross multiple operating systems.
@@ -225,6 +239,12 @@ config MAINLOOP_CONTIKI
 	depends on CONTIKI
 	help
             The mainloop to be used in Contiki platform.
+
+config MAINLOOP_ZEPHYR
+	bool "zephyr"
+	depends on ZEPHYR
+	help
+            The mainloop to be used in Zephyr platform.
 
 endchoice
 
