--- a/src/lib/common/Makefile
+++ b/src/lib/common/Makefile
@@ -23,6 +23,8 @@ obj-log-$(PLATFORM_RIOTOS) += \
     sol-log-impl-riot.o
 obj-log-$(PLATFORM_CONTIKI) += \
     sol-log-impl-contiki.o
+obj-log-$(PLATFORM_ZEPHYR) += \
+    sol-log-impl-zephyr.o
 
 obj-core-$(SOL_BUS) += \
     sol-bus.o
@@ -47,12 +49,18 @@ obj-core-$(MAINLOOP_CONTIKI) += \
     sol-mainloop-common.o \
     sol-mainloop-impl-contiki.o
 
+obj-core-$(MAINLOOP_ZEPHYR) += \
+    sol-mainloop-common.o \
+    sol-mainloop-impl-zephyr.o
+
 obj-core-$(PLATFORM_LINUX_MICRO) += \
     sol-platform-impl-linux-micro.o
 obj-core-$(PLATFORM_RIOTOS) += \
     sol-platform-impl-riot.o
 obj-core-$(PLATFORM_CONTIKI) += \
     sol-platform-impl-contiki.o
+obj-core-$(PLATFORM_ZEPHYR) += \
+    sol-platform-impl-zephyr.o
 
 obj-core-$(PLATFORM_LINUX) += \
     sol-platform-linux-common.o
