--- a/src/lib/flow/Kconfig
+++ b/src/lib/flow/Kconfig
@@ -75,6 +75,7 @@ source "src/modules/flow/pwm/Kconfig"
 source "src/modules/flow/random/Kconfig"
 source "src/modules/flow/robotics/Kconfig"
 source "src/modules/flow/servo-motor/Kconfig"
+source "src/modules/flow/si114x/Kconfig"
 source "src/modules/flow/string/Kconfig"
 source "src/modules/flow/stts751/Kconfig"
 source "src/modules/flow/switcher/Kconfig"
