--- a/src/samples/http/Makefile
+++ b/src/samples/http/Makefile
@@ -1,4 +1,5 @@
-sample-$(DOWNLOAD_SAMPLE) += download client
+sample-$(DOWNLOAD_SAMPLE) += download client static-files
 sample-download-$(DOWNLOAD_SAMPLE) := download.c
 sample-client-$(CLIENT_SAMPLE) := client.c
+sample-static-files-$(STATIC_FILES_SAMPLE) := static-files.c
 
