samples:http: Server sample
Signed-off-by: Flavio Ceolin <flavio.ceolin@intel.com>

--- a/src/samples/http/Makefile
+++ b/src/samples/http/Makefile
@@ -1,5 +1,6 @@
-sample-$(DOWNLOAD_SAMPLE) += download client static-files
+sample-$(DOWNLOAD_SAMPLE) += download client static-files server
 sample-download-$(DOWNLOAD_SAMPLE) := download.c
 sample-client-$(CLIENT_SAMPLE) := client.c
 sample-static-files-$(STATIC_FILES_SAMPLE) := static-files.c
+sample-server-$(SERVER_SAMPLE) := server.c
 
