--- a/src/samples/http/Kconfig
+++ b/src/samples/http/Kconfig
@@ -16,3 +16,8 @@ config STATIC_FILES_SAMPLE
 	bool "Serve static files sample"
 	depends on HTTP_SAMPLES && HTTP_SERVER && USE_FILESYSTEM
 	default y
+
+config SERVER_SAMPLE
+	bool "Server sample"
+	depends on HTTP_SAMPLES && HTTP_SERVER
+	default y
