sample:http: Client sample
It has some of the curl (cli) features, for example:
-d to set post fields (separated by '&')
-v to verbose (print reponse's headers)

Signed-off-by: Flavio Ceolin <flavio.ceolin@intel.com>

--- a/src/samples/http/Kconfig
+++ b/src/samples/http/Kconfig
@@ -6,3 +6,8 @@ config DOWNLOAD_SAMPLE
 	bool "Download sample"
 	depends on COMMON_SAMPLES && HTTP_CLIENT
 	default y
+
+config CLIENT_SAMPLE
+	bool "Client sample"
+	depends on HTTP_SAMPLES && HTTP_CLIENT
+	default y
