--- a/src/samples/http/Makefile
+++ b/src/samples/http/Makefile
@@ -1,3 +1,4 @@
-sample-$(DOWNLOAD_SAMPLE) += download
+sample-$(DOWNLOAD_SAMPLE) += download client
 sample-download-$(DOWNLOAD_SAMPLE) := download.c
+sample-client-$(CLIENT_SAMPLE) := client.c
 
