Plataform+flow: Add timezone/system clock API/nodes.
Signed-off-by: Guilherme Iscaro <guilherme.iscaro@intel.com>

--- a/src/samples/flow/misc/Makefile
+++ b/src/samples/flow/misc/Makefile
@@ -12,3 +12,10 @@ sample-tickets-queue-$(FLOW_MISC_TICKETS_QUEUE_SAMPLE) := tickets_queue.fbp
 
 sample-$(FLOW_MISC_CHANGE_HOSTNAME_SAMPLE) += chamge_hostname
 sample-tickets-queue-$(FLOW_MISC_CHANGE_HOSTNAME_SAMPLE) := change_hostname.fbp
+
+sample-$(FLOW_MISC_CHANGE_TIMEZONE_SAMPLE) += change_timezone
+sample-tickets-queue-$(FLOW_MISC_CHANGE_TIMEZONE_SAMPLE) := change_timezone.fbp
+
+sample-$(FLOW_MISC_CHANGE_SYSTEM_CLOCK_SAMPLE) += change_system_clock
+sample-tickets-queue-$(FLOW_MISC_CHANGE_SYSTEM_CLOCK_SAMPLE) := change_system_clock.fbp
+
