--- a/data/scripts/sol-flow-node-type-gen.py.in
+++ b/data/scripts/sol-flow-node-type-gen.py.in
@@ -429,6 +429,7 @@ extern "C" {
 def generate_header_tail(outfile, data):
     outfile.write("""
 #ifndef SOL_LOG_DOMAIN
+#define SOL_LOG_DOMAIN &_log_domain
 #include "sol-log.h"
 
 #ifdef SOL_LOG_ENABLED
@@ -441,21 +442,28 @@ def generate_header_tail(outfile, data):
 
 #define SOL_LOG_INTERNAL_DECLARE_STATIC(_var, _name) \
     static SOL_LOG_INTERNAL_DECLARE(_var, _name)
+
+SOL_LOG_INTERNAL_DECLARE_STATIC(_log_domain, \"%(domain)s\");
+
 #else // #ifdef SOL_LOG_ENABLED
+
 #define SOL_LOG_INTERNAL_DECLARE(_var, _name)
 #define SOL_LOG_INTERNAL_DECLARE_STATIC(_var, _name)
+
 #ifdef SOL_LOG_DOMAIN
 #undef SOL_LOG_DOMAIN
 #define SOL_LOG_DOMAIN NULL
-
 #endif // #ifdef SOL_LOG_DOMAIN
+
 #endif // #ifdef SOL_LOG_ENABLED
 #endif // ifndef SOL_LOG_DOMAIN
 
 #ifdef __cplusplus
 }
 #endif
-""")
+"""  % {
+    "domain": "flow-" + c_clean(data["name"].lower())
+})
 
 def generate_composed_type_get_signature(outfile, composed_type, prefix):
     types = composed_type[len("composed:"):]
@@ -601,11 +609,6 @@ def generate_code_head(outfile, data):
 #define SOL_LOG_INTERNAL_INIT_ONCE
 #endif // #ifdef SOL_LOG_ENABLED
 
-#ifndef SOL_LOG_DOMAIN
-#define SOL_LOG_DOMAIN &_log_domain
-SOL_LOG_INTERNAL_DECLARE_STATIC(_log_domain, \"%(domain)s\");
-#endif // ifndef SOL_LOG_DOMAIN
-
 static void
 log_init(void)
 {
@@ -617,8 +620,7 @@ log_init(void)
     "header": os.path.basename(data["header"]),
     "namespace": data["namespace"],
     "NAME_C": data["NAME_C"],
-    "float_h": uses_float(data),
-    "domain": "flow-" + c_clean(data["name"].lower())
+    "float_h": uses_float(data)
 })
 
 
