Plataform+Flow: Add support to get/set hostname.
Signed-off-by: Guilherme Iscaro <guilherme.iscaro@intel.com>

--- a/src/samples/flow/misc/Makefile
+++ b/src/samples/flow/misc/Makefile
@@ -9,3 +9,6 @@ sample-random-numbers-$(FLOW_MISC_RANDOM_NUMBERS_SAMPLE) := random-numbers.fbp
 
 sample-$(FLOW_MISC_TICKETS_QUEUE_SAMPLE) += tickets-queue
 sample-tickets-queue-$(FLOW_MISC_TICKETS_QUEUE_SAMPLE) := tickets_queue.fbp
+
+sample-$(FLOW_MISC_CHANGE_HOSTNAME_SAMPLE) += chamge_hostname
+sample-tickets-queue-$(FLOW_MISC_CHANGE_HOSTNAME_SAMPLE) := change_hostname.fbp
