mavlink: introduce the mavlink protocol implementation
This patch introduce the basic infrastructure and API's to control MAV
(Micro Air Vehicle) communication. More API's are to come.

Signed-off-by: Leandro Dorileo <leandro.maciel.dorileo@intel.com>

--- a/.gitmodules
+++ b/.gitmodules
@@ -7,3 +7,6 @@
 [submodule "src/thirdparty/tinydtls"]
 	path = src/thirdparty/tinydtls
 	url = git://git.code.sf.net/p/tinydtls/code
+[submodule "src/thirdparty/mavlink"]
+	path = src/thirdparty/mavlink
+	url = https://github.com/mavlink/c_library.git
