--- a/src/lib/comms/Kconfig
+++ b/src/lib/comms/Kconfig
@@ -106,3 +106,12 @@ config MQTT
 
             The Soletta implementation of MQTT depends on the mosquitto library
             (http://mosquitto.org/)
+
+config MAVLINK
+	bool "Mavlink"
+	default y
+    depends on NETWORK && HAVE_MAVLINK_SRC
+    help
+            MAVLink or Micro Air Vehicle Link is a protocol for communicating with
+            small unmanned vehicle. It is designed as a header-only message marshaling
+            library.
