LWM2M: Add LWM2M server.
This patch introduces a LWM2M server with the following features:

* Registration interface.
* Discovery interface.
* Management interface.
* TLV data types.

What is not supported yet.
* Secure connections. (Data is not encrypted right now)
* LWM2M JSON.
* Queue mode operation.
* SMS support.

Signed-off-by: Guilherme Iscaro <guilherme.iscaro@intel.com>

--- a/src/lib/comms/Kconfig
+++ b/src/lib/comms/Kconfig
@@ -115,3 +115,11 @@ config MAVLINK
             MAVLink or Micro Air Vehicle Link is a protocol for communicating with
             small unmanned vehicle. It is designed as a header-only message marshaling
             library.
+
+config LWM2M
+       bool "LWM2M"
+       default y
+       depends on COAP
+       help
+           LWM2M is a protocol for communication beetween IoT devices defined by OMA
+           (Open Mobile Alliance)
