build:http: Fix sample dependencies
Signed-off-by: Flavio Ceolin <flavio.ceolin@intel.com>

--- a/src/samples/http/Makefile
+++ b/src/samples/http/Makefile
@@ -1,6 +1,12 @@
-sample-$(DOWNLOAD_SAMPLE) += download client static-files server
+sample-$(DOWNLOAD_SAMPLE) += download
 sample-download-$(DOWNLOAD_SAMPLE) := download.c
+
+sample-$(CLIENT_SAMPLE) += client
 sample-client-$(CLIENT_SAMPLE) := client.c
+
+sample-$(STATIC_FILES_SAMPLE) += static-files
 sample-static-files-$(STATIC_FILES_SAMPLE) := static-files.c
+
+sample-$(SERVER_SAMPLE) += server
 sample-server-$(SERVER_SAMPLE) := server.c
 
