samples: add basic sample covering keyboard modes
Signed-off-by: Bruno Dilly <bruno.dilly@intel.com>

--- a/src/samples/flow/basics/Kconfig
+++ b/src/samples/flow/basics/Kconfig
@@ -22,3 +22,8 @@ config FLOW_BASICS_SUBPROCESS_BC_SAMPLE
 	bool
 	depends on FLOW_FBP_GENERATOR_SAMPLES && FLOW_NODE_TYPE_PROCESS
 	default y
+
+config FLOW_BASICS_KEYBOARD_SAMPLE
+	bool
+	depends on FLOW_FBP_GENERATOR_SAMPLES && FLOW_NODE_TYPE_KEYBOARD
+	default y
