zephyr: Add SPI implementation.
Signed-off-by: Gustavo Lima Chaves <gustavo.lima.chaves@intel.com>

--- a/src/lib/io/Makefile
+++ b/src/lib/io/Makefile
@@ -60,6 +60,8 @@ obj-io-spi-$(PLATFORM_RIOTOS) := \
     sol-spi-impl-riot.o
 obj-io-spi-$(PLATFORM_LINUX) := \
     sol-spi-impl-linux.o
+obj-io-spi-$(PLATFORM_ZEPHYR) := \
+    sol-spi-impl-zephyr.o
 
 obj-io-uart-$(PLATFORM_RIOTOS) := \
     sol-uart-impl-riot.o
