http:client: Add composed metatype
Signed-off-by: Flavio Ceolin <flavio.ceolin@intel.com>

--- a/src/lib/flow/Kconfig
+++ b/src/lib/flow/Kconfig
@@ -23,6 +23,7 @@ config INSPECTOR
 
 menu "Metatypes"
 source "src/modules/flow-metatype/js/Kconfig"
+source "src/modules/flow-metatype/http-composed-client/Kconfig"
 endmenu
 
 menu "Node Types"
