zephyr: add PWM implementation.
Signed-off-by: Gustavo Lima Chaves <gustavo.lima.chaves@intel.com>

--- a/src/lib/io/Makefile
+++ b/src/lib/io/Makefile
@@ -48,6 +48,8 @@ obj-io-pwm-$(PLATFORM_RIOTOS) += \
     sol-pwm-impl-riot.o
 obj-io-pwm-$(PLATFORM_LINUX) += \
     sol-pwm-impl-linux.o
+obj-io-pwm-$(PLATFORM_ZEPHYR) += \
+    sol-pwm-impl-zephyr.o
 
 obj-io-i2c-$(USE_I2C) := \
     sol-i2c-common.o
