--- a/src/lib/common/Makefile
+++ b/src/lib/common/Makefile
@@ -100,6 +100,7 @@ requires-private-$(PLATFORM_SYSTEMD) += \
 
 
 headers-y := \
+    include/sol-atomic.h \
     include/sol-log.h \
     include/sol-macros.h \
     include/sol-mainloop.h \
