Add sol-atomic.h, a subset of the C11 atomic API
Only a few commonly used types and the most important operations. Other
types may not be atomic in all platforms, but other operations (like
fetch-and-XOR) can be easily added if needed.

Signed-off-by: Thiago Macieira <thiago.macieira@intel.com>

--- a/src/lib/common/Makefile
+++ b/src/lib/common/Makefile
@@ -118,6 +118,7 @@ requires-private-$(PLATFORM_SYSTEMD) += \
 
 headers-y := \
     include/soletta.h \
+    include/sol-atomic.h \
     include/sol-log.h \
     include/sol-macros.h \
     include/sol-mainloop.h \
