LWM2M: Add Test.
Signed-off-by: Guilherme Iscaro <guilherme.iscaro@intel.com>

--- a/src/test/Makefile
+++ b/src/test/Makefile
@@ -86,3 +86,6 @@ test-test-http-$(TEST_HTTP) := test.c test-http.c
 
 test-$(TEST_CERTIFICATE) += test-certificate
 test-test-certificate-$(TEST_CERTIFICATE) := test.c test-certificate.c
+
+test-$(TEST_LWM2M) += test-lwm2m
+test-test-lwm2m-$(TEST_LWM2M) := test.c test-lwm2m.c
