--- a/src/samples/coap/Kconfig
+++ b/src/samples/coap/Kconfig
@@ -11,3 +11,8 @@ config OIC_SAMPLES
 	bool "OIC samples"
 	depends on OIC && COAP_SAMPLES
 	default y
+
+config LWM2M_SAMPLES
+       bool "LWM2M samples"
+       depends on LWM2M && COAP_SAMPLES
+       default y
