--- a/src/lib/flow/Kconfig
+++ b/src/lib/flow/Kconfig
@@ -71,6 +71,7 @@ source "src/modules/flow/power-supply/Kconfig"
 source "src/modules/flow/process/Kconfig"
 source "src/modules/flow/pwm/Kconfig"
 source "src/modules/flow/random/Kconfig"
+source "src/modules/flow/robotics/Kconfig"
 source "src/modules/flow/servo-motor/Kconfig"
 source "src/modules/flow/string/Kconfig"
 source "src/modules/flow/switcher/Kconfig"
