Node.js bindings: Add infrastructure and start binding platform functions
Signed-off-by: Gabriel Schulhof <gabriel.schulhof@intel.com>

--- a/.gitignore
+++ b/.gitignore
@@ -21,3 +21,6 @@ Kconfig.gen
 /build/
 /include/
 config.log*
+/node_modules/
+/bindings/nodejs/generated/main.cc
+/bindings/nodejs/generated/main.h
