--- a/src/modules/flow/accelerometer/Kconfig
+++ b/src/modules/flow/accelerometer/Kconfig
@@ -1,4 +1,4 @@
 config FLOW_NODE_TYPE_ACCELEROMETER
 	tristate "Node type: accelerometer"
-	depends on PLATFORM_LINUX && USE_I2C
+	depends on USE_I2C
 	default m
