LWM2M Client: Add LWM2M client with registration interface.
Signed-off-by: Guilherme Iscaro <guilherme.iscaro@intel.com>

--- a/src/lib/comms/Kconfig
+++ b/src/lib/comms/Kconfig
@@ -119,7 +119,7 @@ config MAVLINK
 config LWM2M
        bool "LWM2M"
        default y
-       depends on COAP
+       depends on COAP && HTTP
        help
            LWM2M is a protocol for communication between IoT devices defined by OMA
            (Open Mobile Alliance).
