samples:network: Interface monitor
Added basic sample to monitor network interfaces.

Signed-off-by: Flavio Ceolin <flavio.ceolin@intel.com>

--- a/Kconfig
+++ b/Kconfig
@@ -171,6 +171,7 @@ source "src/samples/crypto/Kconfig"
 source "src/samples/http/Kconfig"
 source "src/samples/mqtt/Kconfig"
 source "src/samples/mavlink/Kconfig"
+source "src/samples/network/Kconfig"
 
 config FLOW_SAMPLES
 	bool "Flow samples"
