--- a/src/lib/flow/Kconfig
+++ b/src/lib/flow/Kconfig
@@ -74,6 +74,7 @@ source "src/modules/flow/pwm/Kconfig"
 source "src/modules/flow/random/Kconfig"
 source "src/modules/flow/servo-motor/Kconfig"
 source "src/modules/flow/string/Kconfig"
+source "src/modules/flow/stts751/Kconfig"
 source "src/modules/flow/switcher/Kconfig"
 source "src/modules/flow/temperature/Kconfig"
 source "src/modules/flow/test/Kconfig"
