build: Fix the sol-util-file dependency
Signed-off-by: Flavio Ceolin <flavio.ceolin@intel.com>

--- a/src/shared/Makefile
+++ b/src/shared/Makefile
@@ -20,7 +20,9 @@ obj-libshared-$(PLATFORM_LINUX) += \
     sol-conffile.o \
     sol-file-reader.o \
     sol-lib-loader.o \
-    sol-util-impl-linux.o \
+    sol-util-impl-linux.o
+
+obj-libshared-$(FEATURE_FILESYSTEM) += \
     sol-util-file.o
 
 obj-libshared-$(PLATFORM_RIOTOS) += \
@@ -34,5 +36,5 @@ obj-libshared-y-extra-cflags += -fvisibility=default
 headers-y += \
     include/sol-util.h
 
-headers-$(PLATFORM_LINUX) += \
+headers-$(FEATURE_FILESYSTEM) += \
     include/sol-util-file.h
