Remove Clang warning about non-existent option -Wno-cpp
Clang doesn't understand it. The equivalent for Clang is -Wno-#warnings.

Signed-off-by: Thiago Macieira <thiago.macieira@intel.com>

--- a/src/lib/comms/Makefile
+++ b/src/lib/comms/Makefile
@@ -53,7 +53,7 @@ obj-networking-$(OIC) += \
 
 obj-networking-$(OIC)-extra-cflags += \
     -I$(TINYCBOR_SRC_PATH) \
-    -Wno-cpp \
+    $(CFLAGS_NO_SOURCE_WARNINGS) \
     -Wno-declaration-after-statement \
     -Wno-float-equal \
     -Wno-undef
