Introduce a generic PLATFORM_UNIX
A lot of the code that has so far been under PLATFORM_LINUX will
actually work on generic Unix.

Signed-off-by: Thiago Macieira <thiago.macieira@intel.com>

--- a/src/lib/common/Kconfig
+++ b/src/lib/common/Kconfig
@@ -32,6 +32,11 @@ config DETECT_BOARD_NAME
 config PLATFORM_LINUX
 	bool
 
+config PLATFORM_UNIX
+        bool "unix"
+	depends on HAVE_UNIX
+	default y
+
 choice
 	prompt "Target platform"
 	default PLATFORM_SYSTEMD if LINUX && HAVE_SYSTEMD
@@ -162,7 +167,7 @@ source "src/modules/linux-micro/Kconfig"
 
 choice
 	prompt "Mainloop"
-	default MAINLOOP_POSIX if LINUX
+        default MAINLOOP_POSIX if UNIX
 	default MAINLOOP_RIOTOS if RIOT
 	default MAINLOOP_CONTIKI if CONTIKI
 	default MAINLOOP_ZEPHYR if ZEPHYR
@@ -200,7 +205,7 @@ choice
 
 config MAINLOOP_GLIB
 	bool "glib"
-	depends on LINUX && HAVE_GLIB
+	depends on UNIX && HAVE_GLIB
 	help
             The mainloop is implementated on top of Glib.
 
@@ -215,7 +220,7 @@ config MAINLOOP_GLIB
 
 config MAINLOOP_POSIX
 	bool "posix"
-	depends on LINUX
+	depends on UNIX
 	help
             The mainloop is implementated on top of poll(2) syscall.
 
@@ -253,8 +258,8 @@ config PTHREAD
 
 config THREADS
 	bool "Thread safety"
-	depends on (HAVE_PTHREAD_H && LINUX) || RIOT
-	select PTHREAD if LINUX
+	depends on (HAVE_PTHREAD_H && UNIX) || RIOT
+	select PTHREAD if UNIX
 	default y
 	help
             Allow usage of threads in Soletta applications.
