--- a/src/modules/flow/gtk/Kconfig
+++ b/src/modules/flow/gtk/Kconfig
@@ -1,4 +1,4 @@
 config FLOW_NODE_TYPE_GTK
 	tristate "Node type: gtk"
-	depends on LINUX && HAVE_GTK && HAVE_GLIB
+	depends on UNIX && HAVE_GTK && HAVE_GLIB
 	default m
