soletta.pc: use paths relative to variables.
This allows us to use
build/soletta_sysroot/$PREFIX/lib/pkgconfig/soletta.pc while it's not
installed by calling:

```sh
   export BUILT_PREFIX=$PWD/build/soletta_sysroot/$PREFIX
   export PKG_CONFIG_PATH=$BUILT_PREFIX/lib/pkgconfig:$PKG_CONFIG_PATH
   pkg-config --cflags --libs --define-variable=prefix=$BUILT_PREFIX soletta
```

This may be required to simulate out-of-tree builds without installing
it.

Signed-off-by: Gustavo Sverzut Barbieri gustavo.barbieri@intel.com

--- a/pc/soletta.pc.in
+++ b/pc/soletta.pc.in
@@ -1,11 +1,11 @@
 prefix={{@PREFIX@}}
-exec_prefix={{@PREFIX@}}
-libdir={{@LIBDIR@}}
-includedir={{@INCLUDEDIR@}}
-modulesdir={{@MODULESDIR@}}
-pkgdatadir={{@DATADIR@}}soletta
+exec_prefix=${prefix}
+libdir={{@LIBDIR_RELATIVE@}}
+includedir={{@INCLUDEDIR_RELATIVE@}}
+modulesdir={{@MODULESDIR_RELATIVE@}}
+pkgdatadir={{@DATADIR_RELATIVE@}}soletta
 nodeschemapath=${pkgdatadir}/flow/schemas/node-type-genspec.schema
-nodedescriptionpath={{@DESCDIR@}}
+nodedescriptionpath={{@DESCDIR_RELATIVE@}}
 
 Name: {{@PKGNAME@}}
 Description: Soletta Project is a framework for making IoT devices.
