nodes: Linking with used libraries
It will avoid undefined symbol on those modules.

Signed-off-by: Flavio Ceolin <flavio.ceolin@intel.com>

--- a/src/modules/flow-metatype/js/Makefile
+++ b/src/modules/flow-metatype/js/Makefile
@@ -15,6 +15,9 @@ obj-js-$(FLOW_METATYPE_JAVASCRIPT)-extra-cflags := \
 	-Wno-format-nonliteral \
 	-Wno-suggest-attribute=noreturn
 
+obj-js-$(FLOW_METATYPE_JAVASCRIPT)-extra-ldflags := \
+        -lm
+
 ifneq (,$(NO_SANITIZE_CFLAGS))
 	obj-js-$(FLOW_METATYPE_JAVASCRIPT)-extra-cflags += $(NO_SANITIZE_CFLAGS)
 endif
