--- a/src/modules/flow/http-server/Makefile
+++ b/src/modules/flow/http-server/Makefile
@@ -1,3 +1,5 @@
 obj-$(FLOW_NODE_TYPE_HTTP_SERVER) += http-server.mod
 obj-http-server-$(FLOW_NODE_TYPE_HTTP_SERVER) := http-server.json http-server.o
 obj-http-server-$(FLOW_NODE_TYPE_HTTP_SERVER)-type := flow
+obj-http-server-$(FLOW_NODE_TYPE_HTTP_SERVER)-extra-ldflags := \
+        -lm
