nodes: Linking with used libraries
It will avoid undefined symbol on those modules.

Signed-off-by: Flavio Ceolin <flavio.ceolin@intel.com>

--- a/src/modules/flow-metatype/js/Makefile
+++ b/src/modules/flow-metatype/js/Makefile
@@ -13,7 +13,8 @@ obj-js-$(FLOW_METATYPE_JAVASCRIPT)-type := flow-metatype
 obj-js-$(FLOW_METATYPE_JAVASCRIPT)-extra-cflags := \
 	-Wno-float-equal \
 	-Wno-format-nonliteral \
-	-Wno-suggest-attribute=noreturn
+	-Wno-suggest-attribute=noreturn \
+        -lm
 
 ifneq (,$(NO_SANITIZE_CFLAGS))
 	obj-js-$(FLOW_METATYPE_JAVASCRIPT)-extra-cflags += $(NO_SANITIZE_CFLAGS)
