--- a/src/modules/flow/compass/Makefile
+++ b/src/modules/flow/compass/Makefile
@@ -3,3 +3,5 @@ obj-compass-$(FLOW_NODE_TYPE_COMPASS) := \
 	compass.json \
 	compass.o
 obj-compass-$(FLOW_NODE_TYPE_COMPASS)-type := flow
+obj-compass-$(FLOW_NODE_TYPE_COMPASS)-extra-cflags := \
+        -lm
