--- a/src/modules/flow/grove/Makefile
+++ b/src/modules/flow/grove/Makefile
@@ -2,3 +2,5 @@ obj-$(FLOW_NODE_TYPE_GROVE) += grove.mod
 obj-grove-$(FLOW_NODE_TYPE_GROVE) := grove.json grove.o
 obj-grove-$(FLOW_NODE_TYPE_GROVE)-type := flow
 obj-grove-$(FLOW_NODE_TYPE_GROVE)-deps := flow/aio.mod
+obj-grove-$(FLOW_NODE_TYPE_GROVE)-extra-cflags := \
+        -lm
