--- a/src/modules/flow/form/Makefile
+++ b/src/modules/flow/form/Makefile
@@ -2,3 +2,5 @@ obj-$(FLOW_NODE_TYPE_FORM) += form.mod
 obj-form-$(FLOW_NODE_TYPE_FORM) := form.json form.o ../converter/string-format.o ../converter/string-format.h
 obj-form-$(FLOW_NODE_TYPE_FORM)-type := flow
 obj-form-$(FLOW_NODE_TYPE_FORM)-deps := flow/converter.mod
+obj-form-$(FLOW_NODE_TYPE_FORM)-extra-cflags := \
+        -lm
