oic-samples: Fix light-scan dependencies
 - Add gtk as a dependency
 - Use Kconfig from light-scan directory to build light-scan sample.
   Previously, Kconfig was being ignored.

Signed-off-by: Otavio Pontes <otavio.pontes@intel.com>

--- a/src/samples/flow/oic/light-scan/Makefile
+++ b/src/samples/flow/oic/light-scan/Makefile
@@ -1,7 +1,7 @@
-sample-$(FLOW_OIC_SAMPLE) += \
+sample-$(FLOW_OIC_SCAN_SAMPLE) += \
 	light-client-scan-gtk
 
-sample-light-client-scan-gtk-$(FLOW_OIC_SAMPLE) := \
+sample-light-client-scan-gtk-$(FLOW_OIC_SCAN_SAMPLE) := \
 	light-client-scan.fbp
-sample-light-client-scan-gtk-$(FLOW_OIC_SAMPLE)-conffile := \
+sample-light-client-scan-gtk-$(FLOW_OIC_SCAN_SAMPLE)-conffile := \
 	sol-flow.json
