--- a/src/samples/flow/power-supply/Kconfig
+++ b/src/samples/flow/power-supply/Kconfig
@@ -1,4 +1,4 @@
 config FLOW_POWER_SUPPLY_SAMPLE
 	bool
-	depends on FLOW_FBP_GENERATOR_SAMPLES && FLOW_NODE_TYPE_POWER_SUPPLY
+	depends on FLOW_FBP_GENERATOR_SAMPLES && FLOW_NODE_TYPE_POWER_SUPPLY && FLOW_NODE_TYPE_GTK
 	default y
