--- a/src/samples/flow/semaphore-monitor/Kconfig
+++ b/src/samples/flow/semaphore-monitor/Kconfig
@@ -1,4 +1,4 @@
 config FLOW_SEMAPHORE_MONITOR_SEMAPHORE_MONITOR_CONSOLE_SAMPLE
         bool
-        depends on FLOW_FBP_GENERATOR_SAMPLES
+        depends on FLOW_FBP_GENERATOR_SAMPLES && FLOW_NODE_TYPE_HTTP_CLIENT
         default y
