Node.js bindings: Add JavaScript bindings for UART
This patch provides native and highlevel JavaScript bindings
for UART. Also, it adds enum-string translation functions to
soletta.

Closes gh-1839

Signed-off-by: Sudarsana Nagineni <sudarsana.nagineni@intel.com>
Signed-off-by: Srinivasa Ragavan <srinivasa.ragavan.venkateswaran@intel.com>

--- a/src/lib/io/Makefile
+++ b/src/lib/io/Makefile
@@ -67,9 +67,11 @@ obj-io-spi-$(PLATFORM_LINUX) := \
 obj-io-spi-$(PLATFORM_ZEPHYR) := \
     sol-spi-impl-zephyr.o
 
-obj-io-uart-$(PLATFORM_RIOTOS) := \
+obj-io-uart-$(USE_UART) := \
+    sol-uart-common.o
+obj-io-uart-$(PLATFORM_RIOTOS) += \
     sol-uart-impl-riot.o
-obj-io-uart-$(PLATFORM_LINUX) := \
+obj-io-uart-$(PLATFORM_LINUX) += \
     sol-uart-impl-linux.o
 
 obj-io-iio-$(USE_IIO) := \
