Node.js bindings: Add JS bindings for SPI
This patch contains the native and highlevel JavaScript bindings for SPI.

Signed-off-by: Sudarsana Nagineni <sudarsana.nagineni@intel.com>
Signed-off-by: Srinivasa Ragavan <srinivasa.ragavan.venkateswaran@intel.com>

--- a/src/lib/io/Makefile
+++ b/src/lib/io/Makefile
@@ -60,11 +60,13 @@ obj-io-i2c-$(PLATFORM_LINUX) += \
 obj-io-i2c-$(PLATFORM_ZEPHYR) += \
     sol-i2c-impl-zephyr.o
 
-obj-io-spi-$(PLATFORM_RIOTOS) := \
+obj-io-spi-$(USE_SPI) := \
+    sol-spi-common.o
+obj-io-spi-$(PLATFORM_RIOTOS) += \
     sol-spi-impl-riot.o
-obj-io-spi-$(PLATFORM_LINUX) := \
+obj-io-spi-$(PLATFORM_LINUX) += \
     sol-spi-impl-linux.o
-obj-io-spi-$(PLATFORM_ZEPHYR) := \
+obj-io-spi-$(PLATFORM_ZEPHYR) += \
     sol-spi-impl-zephyr.o
 
 obj-io-uart-$(USE_UART) := \
