--- a/package.json
+++ b/package.json
@@ -24,5 +24,12 @@
   "dependencies": {
     "bindings": "^1.2.1",
     "nan": "^2.1.0"
+  },
+  "devDependencies": {
+    "async": "^1.5.2",
+    "glob": "^6.0.4",
+    "lodash": "^4.3.0",
+    "qunitjs": "^1.21.0",
+    "uuid": "^2.0.1"
   }
 }
