--- a/Kconfig
+++ b/Kconfig
@@ -222,7 +222,7 @@ endmenu
 menu "Bindings"
 config USE_NODEJS
 	bool "Node.js bindings"
-	depends on HAVE_NODEJS && HAVE_NODEJS_NPM
+	depends on HAVE_NODEJS && HAVE_NODEJS_NPM && HAVE_NODE_GYP
 	default n
 	help
 		Enable Node.js bindings
