flow: Don't assume node-type headers are all in the same place
The FBP generator assumes that all node types headers can be found
under sol-flow/ in the include directory. This is wrong, as the
node-type generator may take a 'namespace' parameter where the headers
will be stored.

In order for the generator to do the right thing, store the namespace +
header name in the JSON description generated, so the FBP generator can
make use of it to include the right file.

Signed-off-by: Iván Briano <ivan.briano@intel.com>

--- a/data/scripts/sol-flow-node-type-gen.py.in
+++ b/data/scripts/sol-flow-node-type-gen.py.in
@@ -1113,6 +1113,7 @@ def generate_description_entry(descriptions, data):
     entry = {
         "symbol": data["NAME_C"],
         "options_symbol": data["name_c"] + "_options",
+        "header_file": data["namespace"] + os.path.basename(data["header"]),
         }
     descriptions.append(entry)
     dict_copy_nonempty_keys(entry, data,
