zephyr: Add GPIO support
And rework a bit the main loop, so that GPIO interruptions are handled
properly.

Signed-off-by: Ricardo de Almeida Gonzaga <ricardo.gonzaga@intel.com>
Signed-off-by: Ederson de Souza <ederson.desouza@intel.com>
Signed-off-by: Iván Briano <ivan.briano@intel.com>

--- a/src/lib/io/Makefile
+++ b/src/lib/io/Makefile
@@ -37,6 +37,8 @@ obj-io-gpio-$(PLATFORM_CONTIKI) += \
     sol-gpio-impl-contiki.o
 obj-io-gpio-$(PLATFORM_LINUX) += \
     sol-gpio-impl-linux.o
+obj-io-gpio-$(PLATFORM_ZEPHYR) += \
+    sol-gpio-impl-zephyr.o
 
 obj-io-pwm-$(USE_PWM) := \
     sol-pwm-common.o
