comms: Add Bluetooth interface management for zephyr
This patch does not manage more than one interface, since the zephyr Bluetooth
API does not support it.

Signed-off-by: Bruno Bottazzini <bruno.bottazzini@intel.com>

--- a/src/lib/comms/Makefile
+++ b/src/lib/comms/Makefile
@@ -37,6 +37,9 @@ obj-networking-$(PLATFORM_LINUX) += \
     sol-network-impl-linux.o \
     sol-socket-impl-linux.o
 
+obj-networking-$(PLATFORM_ZEPHYR) += \
+    sol-network-impl-zephyr.o
+
 obj-networking-$(COAP) += \
     coap.o \
     sol-coap.o
