Add IIO node sample include Gryosope and Magnet
Change-Id: I5c8389510c91547b9617f4058ae5e302eec2ff09
Signed-off-by: guchaojie <chao.jie.gu@intel.com>

--- a/src/samples/flow/iio/Makefile
+++ b/src/samples/flow/iio/Makefile
@@ -1,2 +1,7 @@
 sample-$(FLOW_IIO_SAMPLE) += iio-gyro
 sample-iio-gyro-$(FLOW_IIO_SAMPLE) := gyroscope.fbp
+sample-iio-gyro-$(FLOW_IIO_SAMPLE)-conffile := sol-flow-intel-minnow-max-linux_gt_3_17.json
+
+sample-$(FLOW_IIO_SAMPLE) += iio-magnet
+sample-iio-magnet-$(FLOW_IIO_SAMPLE) := magnet.fbp
+sample-iio-magnet-$(FLOW_IIO_SAMPLE)-conffile := sol-flow-intel-minnow-max-linux_gt_3_17.json
