Add IIO node sample include Gryosope, Magnet, Accelerate, Color, Humidity, Light, ADC, Pressure and Temperature
Change-Id: I5c8389510c91547b9617f4058ae5e302eec2ff09
Signed-off-by: guchaojie <chao.jie.gu@intel.com>

--- a/src/samples/flow/iio/Makefile
+++ b/src/samples/flow/iio/Makefile
@@ -1,2 +1,35 @@
 sample-$(FLOW_IIO_SAMPLE) += iio-gyro
 sample-iio-gyro-$(FLOW_IIO_SAMPLE) := gyroscope.fbp
+sample-iio-gyro-$(FLOW_IIO_SAMPLE)-conffile := sol-flow-intel-minnow-max-linux_gt_3_17.json
+
+sample-$(FLOW_IIO_SAMPLE) += iio-magnet
+sample-iio-magnet-$(FLOW_IIO_SAMPLE) := magnet.fbp
+sample-iio-magnet-$(FLOW_IIO_SAMPLE)-conffile := sol-flow-intel-minnow-max-linux_gt_3_17.json
+
+sample-$(FLOW_IIO_SAMPLE) += iio-accelerate
+sample-iio-accelerate-$(FLOW_IIO_SAMPLE) := accelerate.fbp
+sample-iio-accelerate-$(FLOW_IIO_SAMPLE)-conffile := sol-flow-intel-minnow-max-linux_gt_3_17.json
+
+sample-$(FLOW_IIO_SAMPLE) += iio-color
+sample-iio-color-$(FLOW_IIO_SAMPLE) := color.fbp
+sample-iio-color-$(FLOW_IIO_SAMPLE)-conffile := sol-flow-intel-minnow-max-linux_gt_3_17.json
+
+sample-$(FLOW_IIO_SAMPLE) += iio-humidity
+sample-iio-humidity-$(FLOW_IIO_SAMPLE) := humidity.fbp
+sample-iio-humidity-$(FLOW_IIO_SAMPLE)-conffile := sol-flow-intel-minnow-max-linux_gt_3_17.json
+
+sample-$(FLOW_IIO_SAMPLE) += iio-light
+sample-iio-light-$(FLOW_IIO_SAMPLE) := light.fbp
+sample-iio-light-$(FLOW_IIO_SAMPLE)-conffile := sol-flow-intel-minnow-max-linux_gt_3_17.json
+
+sample-$(FLOW_IIO_SAMPLE) += iio-pressure
+sample-iio-pressure-$(FLOW_IIO_SAMPLE) := pressure.fbp
+sample-iio-pressure-$(FLOW_IIO_SAMPLE)-conffile := sol-flow-intel-minnow-max-linux_gt_3_17.json
+
+sample-$(FLOW_IIO_SAMPLE) += iio-temperature
+sample-iio-temperature-$(FLOW_IIO_SAMPLE) := temperature.fbp
+sample-iio-temperature-$(FLOW_IIO_SAMPLE)-conffile := sol-flow-intel-minnow-max-linux_gt_3_17.json
+
+sample-$(FLOW_IIO_SAMPLE) += iio-adc
+sample-iio-adc-$(FLOW_IIO_SAMPLE) := adc.fbp
+sample-iio-adc-$(FLOW_IIO_SAMPLE)-conffile := sol-flow-intel-galileo-rev-g.json
