io: Update config file names
Use configuration file name scheme to avoid the need to
rename in order to run the samples. Also, merge both configs
in one file.

Signed-off-by: Murilo Belluzzo <murilo.belluzzo@intel.com>

--- a/src/samples/flow/io/Makefile
+++ b/src/samples/flow/io/Makefile
@@ -5,9 +5,9 @@ sample-$(FLOW_IO_SAMPLE) += \
 sample-io-pwm-$(FLOW_IO_SAMPLE) := \
 	pwm.fbp
 sample-io-pwm-$(FLOW_IO_SAMPLE)-conffile := \
-	pwm.json
+	sol-flow-intel-edison-rev-c.json
 
 sample-io-servo-motor-$(FLOW_IO_SAMPLE) := \
 	servo-motor.fbp
 sample-io-servo-motor-$(FLOW_IO_SAMPLE)-conffile := \
-	servo-motor.json
+	sol-flow-intel-edison-rev-c.json
