--- a/src/lib/comms/Kconfig
+++ b/src/lib/comms/Kconfig
@@ -49,7 +49,7 @@ config COAP
 config OIC
 	bool "OIC"
 	default y
-	depends on COAP && HAVE_TINYCBOR_SRC
+	depends on COAP && FEATURE_OIC && HAVE_TINYCBOR_SRC
 	help
             Implementation of protocol defined by Open Interconnect Consortium
             (OIC - http://openinterconnect.org/)
