oic: Add just works ownership transfer method in oic lib
This patch adds a implementation of the just works ownership transfer
method, specified by OIC and compatible with iotivity-1.1.0.

The code of this patch is a modified version of a previous patch made by
Leandro Pereira <leandro.pereira@intel.com>.

Signed-off-by: Otavio Pontes <otavio.pontes@intel.com>

--- a/src/lib/comms/Makefile
+++ b/src/lib/comms/Makefile
@@ -40,6 +40,7 @@ obj-networking-$(OIC) += \
     sol-oic-client.o \
     sol-oic-common.o \
     sol-oic-server.o \
+    sol-oic-security.o \
     $(TINYCBOR_SRC_PATH)/cborencoder.o \
     $(TINYCBOR_SRC_PATH)/cborerrorstrings.o \
     $(TINYCBOR_SRC_PATH)/cborparser.o \
