samples/flow/c-api: add missing dependencies.
these samples require some flow modules to be built, so depend on
them.

Signed-off-by: Gustavo Sverzut Barbieri gustavo.barbieri@intel.com

--- a/src/samples/flow/c-api/Kconfig
+++ b/src/samples/flow/c-api/Kconfig
@@ -5,15 +5,15 @@ config FLOW_C_API_CUSTOM_NODE_TYPES_SAMPLE
 
 config FLOW_C_API_HIGHLEVEL_SAMPLE
 	bool
-	depends on FLOW_SUPPORT
+	depends on FLOW_SUPPORT && FLOW_NODE_TYPE_CONSOLE
 	default y
 
 config FLOW_C_API_LOWLEVEL_SAMPLE
 	bool
-	depends on FLOW_SUPPORT
+	depends on FLOW_SUPPORT && FLOW_NODE_TYPE_CONSOLE
 	default y
 
 config FLOW_C_API_SIMPLECTYPE_SAMPLE
 	bool
-	depends on FLOW_SUPPORT
+	depends on FLOW_SUPPORT && FLOW_NODE_TYPE_CONSOLE && FLOW_NODE_TYPE_BOOLEAN && FLOW_NODE_TYPE_INT && FLOW_NODE_TYPE_TIMER
 	default y
