--- a/.gitmodules
+++ b/.gitmodules
@@ -2,15 +2,19 @@
 	path = src/thirdparty/duktape
 	url = https://github.com/solettaproject/duktape-release.git
 	ignore = dirty
+	branch = master
 [submodule "src/thirdparty/tinycbor"]
 	path = src/thirdparty/tinycbor
 	url = https://github.com/01org/tinycbor/
 	ignore = dirty
+	branch = master
 [submodule "src/thirdparty/tinydtls"]
 	path = src/thirdparty/tinydtls
 	url = git://git.code.sf.net/p/tinydtls/code
 	ignore = dirty
+	branch = master
 [submodule "src/thirdparty/mavlink"]
 	path = src/thirdparty/mavlink
 	url = https://github.com/mavlink/c_library.git
 	ignore = dirty
+	branch = master
