--- a/src/samples/flow/c-api/Kconfig
+++ b/src/samples/flow/c-api/Kconfig
@@ -17,3 +17,8 @@ config FLOW_C_API_SIMPLECTYPE_SAMPLE
 	bool
 	depends on FLOW_SUPPORT && FLOW_NODE_TYPE_CONSOLE && FLOW_NODE_TYPE_BOOLEAN && FLOW_NODE_TYPE_INT && FLOW_NODE_TYPE_TIMER
 	default y
+
+config FLOW_C_API_FIND_TYPE_SAMPLE
+	bool
+	depends on RESOLVER_CONFFILE
+	default y
