build: Fix undefined reference
Adding libmath to ldflags when it's necessary.

Signed-off-by: Flavio Ceolin <flavio.ceolin@intel.com>

--- a/src/lib/common/Makefile
+++ b/src/lib/common/Makefile
@@ -6,6 +6,9 @@ obj-core-y := \
     sol-platform.o \
     sol-types.o
 
+obj-core-extra-ldflags = \
+    -lm
+
 obj-$(POWER_SUPPLY) += \
     power-supply.mod
 
