--- a/src/modules/flow/trigonometry/Makefile
+++ b/src/modules/flow/trigonometry/Makefile
@@ -1,3 +1,4 @@
 obj-$(FLOW_NODE_TYPE_TRIGONOMETRY) += trigonometry.mod
 obj-trigonometry-$(FLOW_NODE_TYPE_TRIGONOMETRY) := trigonometry.json trigonometry.o
 obj-trigonometry-$(FLOW_NODE_TYPE_TRIGONOMETRY)-type := flow
+obj-trigonometry-$(FLOW_NODE_TYPE_TRIGONOMETRY)-extra-ldflags = -lm
