--- a/src/modules/flow/float/Makefile
+++ b/src/modules/flow/float/Makefile
@@ -1,4 +1,5 @@
 obj-$(FLOW_NODE_TYPE_FLOAT) += float.mod
 obj-float-$(FLOW_NODE_TYPE_FLOAT) := float.json float.o
 obj-float-$(FLOW_NODE_TYPE_FLOAT)-type := flow
+obj-float-$(FLOW_NODE_TYPE_FLOAT)-extra-ldflags = -lm
 
