--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "async": "^1.5.2",
     "glob": "^6.0.4",
     "lodash": "^4.3.0",
+    "optimist": "^0.6.1",
     "qunitjs": "^1.21.0",
     "uuid": "^2.0.1"
   }
