Node.js bindings: Use yargs to parse test suite command line
Signed-off-by: Gabriel Schulhof <gabriel.schulhof@intel.com>

--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "glob": "^6.0.4",
     "lodash": "^4.3.0",
     "qunitjs": "^1.21.0",
-    "uuid": "^2.0.1"
+    "uuid": "^2.0.1",
+    "yargs": "^4.2.0"
   }
 }
