--- a/src/samples/flow/c-api/Makefile
+++ b/src/samples/flow/c-api/Makefile
@@ -19,3 +19,6 @@ sample-simplectype-$(FLOW_C_API_SIMPLECTYPE_SAMPLE) := simplectype.c
 sample-$(FLOW_C_API_FIND_TYPE_SAMPLE) += find-type
 sample-find-type-$(FLOW_C_API_FIND_TYPE_SAMPLE) := find-type.c
 sample-find-type-$(FLOW_C_API_FIND_TYPE_SAMPLE)-extra-ldflags := -ldl
+
+sample-$(FLOW_C_API_SINGLE_NODE_SAMPLE) += single-node
+sample-single-node-$(FLOW_C_API_SINGLE_NODE_SAMPLE) := single-node.c
