tools: Add command line tool to manipulate GPIO
It helps a lot in platform debugging, specially when you don't need
that the program keeps running, it just set what it needs and exit.

Signed-off-by: Murilo Belluzzo <murilo.belluzzo@intel.com>

--- a/Kconfig
+++ b/Kconfig
@@ -233,6 +233,7 @@ depends on FEATURE_RUNNABLE_PROGRAMS
 source "src/bin/sol-fbp-generator/Kconfig"
 source "src/bin/sol-fbp-runner/Kconfig"
 source "src/bin/sol-fbp-to-dot/Kconfig"
+source "src/bin/sol-gpio/Kconfig"
 endmenu
 
 menu "Test suite"
