--- a/Kconfig
+++ b/Kconfig
@@ -213,6 +213,7 @@ depends on FEATURE_RUNNABLE_PROGRAMS
 source "src/bin/sol-fbp-generator/Kconfig"
 source "src/bin/sol-fbp-runner/Kconfig"
 source "src/bin/sol-fbp-to-dot/Kconfig"
+source "src/bin/sol-gpio/Kconfig"
 endmenu
 
 menu "Test suite"
