tools: Add command line tool to manipulate AIO
Also very helpful during platform debug, it reads the desired AIO input
each 100ms. There is a lot of room for improvement, like be able to set
the polling time, but this version is already very useful.

Signed-off-by: Murilo Belluzzo <murilo.belluzzo@intel.com>

--- a/src/bin/sol-tools/Kconfig
+++ b/src/bin/sol-tools/Kconfig
@@ -1,3 +1,10 @@
+config TOOL_AIO
+    bool "sol-aio"
+    depends on USE_AIO
+    default y
+    help
+        Command line tool to manipulate Analog IO
+
 config TOOL_GPIO
     bool "sol-gpio"
     depends on USE_GPIO
