samples/flow: add comprehensive sample using OIC and HTTP
This sample provides a light-server that does both HTTP and OIC, as
well as saving data to disc. There are two controllers, one via HTTP
and a second via OIC, they interact using the keyboard.

It is just an initial sample and should be extended to cover more
real-world cases such as using form, gpio and persistence to do be
able to run as standalone products.

--- a/Kconfig
+++ b/Kconfig
@@ -201,6 +201,7 @@ source "src/samples/flow/minnow-calamari/Kconfig"
 source "src/samples/flow/misc/Kconfig"
 source "src/samples/flow/oic/Kconfig"
 source "src/samples/flow/oic/light-scan/Kconfig"
+source "src/samples/flow/oic-and-http-light/Kconfig"
 source "src/samples/flow/power-supply/Kconfig"
 source "src/samples/flow/trash-disposer/Kconfig"
 source "src/samples/flow/unix-socket/Kconfig"
