common: Let Soletta run on Zephyr nanokernels too.
It detects at build time if Zephyr is building a microkernel or a
nanokernel and adjusts accordingly.
For nanokernels, Zephyr must be built with CONFIG_NANO_TIMEOUTS=y

Signed-off-by: Iván Briano <ivan.briano@intel.com>

--- a/src/lib/common/Kconfig
+++ b/src/lib/common/Kconfig
@@ -160,6 +160,12 @@ config SOL_BUS
 
 source "src/modules/linux-micro/Kconfig"
 
+config MAINLOOP_ZEPHYR_NANO
+	bool
+
+config MAINLOOP_ZEPHYR_MICRO
+	bool
+
 choice
 	prompt "Mainloop"
 	default MAINLOOP_POSIX if LINUX
@@ -243,6 +249,8 @@ config MAINLOOP_CONTIKI
 config MAINLOOP_ZEPHYR
 	bool "zephyr"
 	depends on ZEPHYR
+	select MAINLOOP_ZEPHYR_NANO if !FEATURE_ZEPHYR_MICROKERNEL
+	select MAINLOOP_ZEPHYR_MICRO if FEATURE_ZEPHYR_MICROKERNEL
 	help
             The mainloop to be used in Zephyr platform.
 
