flow: fix building and install without node type description.
the files that implement need description-related features are not
even compiled if it is disabled, so do not install the header files.

fix samples dependencies so they are not compiled if their
dependencies are missing.

Signed-off-by: Gustavo Sverzut Barbieri <gustavo.barbieri@intel.com>

--- a/src/samples/flow/c-api/Kconfig
+++ b/src/samples/flow/c-api/Kconfig
@@ -5,7 +5,7 @@ config FLOW_C_API_CUSTOM_NODE_TYPES_SAMPLE
 
 config FLOW_C_API_HIGHLEVEL_SAMPLE
 	bool
-	depends on FLOW_SUPPORT && FLOW_NODE_TYPE_CONSOLE
+	depends on NODE_DESCRIPTION && FLOW_NODE_TYPE_CONSOLE
 	default y
 
 config FLOW_C_API_LOWLEVEL_SAMPLE
@@ -15,7 +15,7 @@ config FLOW_C_API_LOWLEVEL_SAMPLE
 
 config FLOW_C_API_SIMPLECTYPE_SAMPLE
 	bool
-	depends on FLOW_SUPPORT && FLOW_NODE_TYPE_CONSOLE && FLOW_NODE_TYPE_BOOLEAN && FLOW_NODE_TYPE_INT && FLOW_NODE_TYPE_TIMER
+	depends on NODE_DESCRIPTION && FLOW_NODE_TYPE_CONSOLE && FLOW_NODE_TYPE_BOOLEAN && FLOW_NODE_TYPE_INT && FLOW_NODE_TYPE_TIMER
 	default y
 
 config FLOW_C_API_FIND_TYPE_SAMPLE
