--- a/src/lib/flow/Makefile
+++ b/src/lib/flow/Makefile
@@ -30,14 +30,16 @@ obj-flow-$(RESOLVER_CONFFILE) += \
 obj-flow-$(FLOW_SUPPORT)-extra-cflags += $(def-resolver-flag)
 
 headers-$(FLOW_SUPPORT) := \
-    include/sol-flow-builder.h \
     include/sol-flow.h \
     include/sol-flow-inspector.h \
     include/sol-flow-metatype.h \
     include/sol-flow-packet.h \
-    include/sol-flow-parser.h \
-    include/sol-flow-resolver.h \
     include/sol-flow-simplectype.h \
     include/sol-flow-single.h \
     include/sol-flow-static.h \
     sol-flow-buildopts.h.in
+
+headers-$(NODE_DESCRIPTION) += \
+    include/sol-flow-parser.h \
+    include/sol-flow-resolver.h \
+    include/sol-flow-builder.h
