flow:metatype: Add server node
Signed-off-by: Flavio Ceolin <flavio.ceolin@intel.com>

--- a/src/lib/flow/Kconfig
+++ b/src/lib/flow/Kconfig
@@ -24,6 +24,7 @@ config INSPECTOR
 menu "Metatypes"
 source "src/modules/flow-metatype/js/Kconfig"
 source "src/modules/flow-metatype/http-composed-client/Kconfig"
+source "src/modules/flow-metatype/http-composed-server/Kconfig"
 endmenu
 
 menu "Node Types"
