Flow: Add float editor nodes.
Those include: Direction vector, location and float (drange).

Signed-off-by: Guilherme Iscaro <guilherme.iscaro@intel.com>

--- a/src/modules/flow/gtk/Makefile
+++ b/src/modules/flow/gtk/Makefile
@@ -10,6 +10,7 @@ obj-gtk-$(FLOW_NODE_TYPE_GTK) := \
 	pwm-editor.o \
 	pwm-viewer.o \
 	rgb-editor.o \
+	float-editor.o \
 	slider.o \
 	spinbutton.o \
 	toggle.o \
