flow: Add support to lsm9ds0 sensor
LSM9DS0 it's a chipset containing a gyroscope, magnetometer,
accelerometer and temperature sensor. It's divided in two I2C devices,
one for the gyroscope and another for the remaining sensors.

Signed-off-by: Murilo Belluzzo <murilo.belluzzo@intel.com>

--- a/src/lib/flow/Kconfig
+++ b/src/lib/flow/Kconfig
@@ -60,6 +60,7 @@ source "src/modules/flow/keyboard/Kconfig"
 source "src/modules/flow/led-7seg/Kconfig"
 source "src/modules/flow/led-strip/Kconfig"
 source "src/modules/flow/location/Kconfig"
+source "src/modules/flow/lsm9ds0/Kconfig"
 source "src/modules/flow/magnetometer/Kconfig"
 source "src/modules/flow/max31855/Kconfig"
 source "src/modules/flow/mqtt/Kconfig"
