coap: finally get rid of hardcoded packet sizes at sending side.
We're abusing tinycbor's API, but at least we get to incrementally bump
a CoAP packet's buffer size (that should not happen frequently, since
the growth is exponential and it starts with a guessed typical OIC/cbor
payload size).

I chose to change struct sol_oic_repr_field field names so that a macro
could handle both scalar field and key cases of cbor encoding.

Signed-off-by: Gustavo Lima Chaves <gustavo.lima.chaves@intel.com>

--- a/src/test-cpp/headers.cc.in
+++ b/src/test-cpp/headers.cc.in
@@ -190,7 +190,7 @@ startup()
     struct sol_oic_repr_field rep_field8 = SOL_OIC_REPR_HALF_FLOAT("8", &f);
     struct sol_oic_repr_field rep_field9 = SOL_OIC_REPR_FLOAT("9", 2.3);
     struct sol_oic_repr_field rep_field10 = SOL_OIC_REPR_DOUBLE("10", 2.3);
-    struct sol_oic_repr_field rep_field11 = SOL_OIC_REPR_FIELD("131231", SOL_OIC_REPR_TYPE_UINT, .v_uint = 123);
+    struct sol_oic_repr_field rep_field11 = SOL_OIC_REPR_FIELD("131231", SOL_OIC_REPR_TYPE_UINT, .f_uint = 123);
     SOL_OIC_MAP_LOOP(&map, &rep_field1, &iterator, end_reason);
 #endif
 
